# VibeCheck

./: .env  .env.example  .gitignore  PRD.md  README.md  crawler.py  crawler_pipeline.py  crawler_server.py  db_init.py  deploy.sh  main.py  pyproject.toml  requirements.api.txt  test_guiji_embedding.py
.github/workflows/: deploy.yml
app/: __init__.py  config.py  database.py  main.py  schemas.py
app/routers/: __init__.py  recommend.py  search.py  songs.py
app/services/: __init__.py  embedding.py  llm.py  recommend.py  search.py
deploy_crawler/: Dockerfile  README.md  app.py  backfill_album_covers.py  batch_ai_analysis.py  batch_lyrics_vectorization.py  batch_update_core_lyrics.py  batch_vectorization.py  compute_tfidf.py  daily_ai_analysis.sh  data_cleaning.py  db_init.py  delete_invalid_songs.py  docker-compose.yml  extract_core_lyrics.py  hybrid_search_test.py  mark_duplicates.py  migrate_add_column.py  migrate_v2_vibe_fields.py  migrate_v3_updated_at.py  migrate_v4_rational_fields.py  migrate_v6_core_lyrics.py  requirements.txt  run_extract_background.sh  stopwords.txt  test_famous_core_lyrics.py  view.sql
deploy_crawler/migrate/: migrate_add_column.py  migrate_v2_vibe_fields.py  migrate_v3_updated_at.py  migrate_v4_rational_fields.py  migrate_v5_add_comments.py
docs/: DEVELOPMENT_STATUS.md  FRONTEND_DEV_DOC.md  GO_MIGRATION_GUIDE.md  PRD.md  PROJECT_OVERVIEW.md  STRATEGIC_RECOMMENDATIONS.md  STRATEGIC_RECOMMENDATIONS_v2.md  THESIS_IMPROVEMENT.md  TWITTER_ALGORITHM_INSIGHTS.md  product_roadmap.md
frontend/: index.html  package-lock.json  package.json
(+23 files in other folders)
