[project]
name = "vibecheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "jieba>=0.42.1",
    "openai>=2.12.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "selenium>=4.39.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
